--- a/paper/1.md
+++ b/paper/1.md
@@ -65,9 +65,7 @@ Wei等人[1]在2022年提出了思维链（Chain-of-Thought）提示技术，通
 
 Transformer模型[5]采用自注意力（Self-Attention）机制进行序列建模。其核心计算过程为：
 
-```
-Attention(Q, K, V) = softmax(QK^T / √d_k) V
-```
+$Attention(Q, K, V) = \text{softmax}\left(\frac{QK^T}{\sqrt{d_k}}\right)V$
 
 其中，QK^T的计算是矩阵乘法，具有**并行计算**的特性。这意味着，在一次前向传播中，模型可以"同时"计算所有token对之间的相关性。
 
@@ -109,12 +107,14 @@ DeepSeek-V3[2]提供了"思考模式"和"非思考模式"两种推理模式：
 
 在Transformer的attention计算中：
 
-```python
-# 简化的attention计算过程
-scores = Q @ K.T  # 矩阵乘法，并行计算
-weights = softmax(scores / sqrt(d_k))
-output = weights @ V
-```
+简化的attention计算过程
+$$
+\begin{align*}
+\text{scores} &= QK^T \\
+\text{weights} &= \text{softmax}\left(\frac{\text{scores}}{\sqrt{d_k}}\right) \\
+\text{output} &= \text{weights}V
+\end{align*}
+$$
 
 `Q @ K.T`这一步是矩阵乘法，具有并行计算的特性。在这一瞬间，模型"同时"获得了所有token对之间的相关性信息。
 
@@ -126,9 +126,9 @@ output = weights @ V
 
 大语言模型的生成过程是自回归的：
 
-```
-y_t = argmax P(y | x, y_1, y_2, ..., y_{t-1})
-```
+$$
+y_t = \operatorname*{argmax}_y P(y | x, y_1, y_2, \dots, y_{t-1})
+$$
 
 每个token的生成都依赖于之前生成的所有token。这是一个**串行的、逐步的**过程。
 
